# quantum-optimal-transport-demo

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT  README.md  TODO.md  conftest.py  llms.txt  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: base.yaml  default.yaml  scenario_genetics.yaml  scenario_hyperscanning.yaml  scenario_llm_alignment.yaml
data/: README.md
docs/: audit-notebooks-2026-05-28.md  common_errors.md  dictionary.tex  glossary.tex  hardware_notes.md  notebook_template.md  qot-course-session-by-session.md  qot-course-teaser.md  qot-research-extension-2026-06.md  scientific_claims_guardrails.md
docs/superpowers/: STATE.md
notebooks/: s01_roadmap.ipynb  s02_qubits.ipynb  s04_composite.ipynb  s06_geometry.ipynb  s09_wasserstein.ipynb  s10_sinkhorn.ipynb  s11_gaussians.ipynb  s12_why_qot.ipynb  s13_sdp.ipynb  s14_quantum_sinkhorn.ipynb  s15_capstone.ipynb
notebooks/00_GettingStarted/: 01_environment_setup.ipynb  02_what_is_optimal_transport.ipynb
notebooks/01_QuantumFoundations/: 01_amplitudes_and_superposition.ipynb  01_qubits.ipynb  02_density.ipynb  02_the_bloch_sphere.ipynb  02_why_amplitudes_are_complex.ipynb  03_composite.ipynb  03_measurement_and_born_rule.ipynb  03_the_bloch_sphere.ipynb  04_measurement_and_born_rule.ipynb  04_shot_noise_and_first_circuit.ipynb  05_from_states_to_density_matrix.ipynb  05_inner_product_and_dirac.ipynb  06_gates_as_unitary_evolution.ipynb  06_pure_vs_mixed.ipynb  07_fidelity_and_trace_distance.ipynb  07_pauli_gates.ipynb  08_hadamard_and_measurement_bases.ipynb  (+15 more)
scripts/: __init__.py  check_no_hardcoded_hex.py  demo_visualization.py  gen_llms_txt.py  generate_data.py  show_palette.py  test_qot_pipeline.py
src/: __init__.py
summaries/: build_s01_syllabus.py  build_s02_summary.py  build_s03_summary.py  build_s04_summary.py  build_s05_summary.py  build_s06_summary.py  build_s07_summary.py  build_s08_summary.py  build_s09_summary.py  build_s10_summary.py  build_s11_summary.py  build_s12_summary.py  build_s13_summary.py  build_s14_summary.py  build_s15_summary.py  build_s16_summary.py
tests/: test_build.py  test_capstone.py  test_classical_ot.py  test_colors.py  test_composite.py  test_config.py  test_config_loader.py  test_density.py  test_discrimination.py  test_embeddings.py  test_gates.py  test_gaussian_wasserstein.py  test_generate_data_cli.py  test_geometry.py  test_infotheory.py  test_intro.py  test_logging_config.py  test_notebooks_execute.py  test_ot_metrics.py  test_ot_plots.py  test_qot_algorithms.py  test_qot_metrics.py  test_quantum_circuits.py  test_quantum_infotheory.py  test_quantum_ot_preview.py  test_quantum_ot_sdp.py  test_quantum_plots.py  test_quantum_simulators.py  test_quantum_sinkhorn.py  test_runtime.py  test_simulators.py  test_sinkhorn.py  test_smoke.py  test_state_preparation.py  test_states.py  test_synthesis.py  test_tomography.py  test_transport.py  test_utils.py  test_viz.py  (+4 more)
(+126 files in other folders)
