[project]
name = "qot-course"
version = "0.1.0"
description = "A hands-on course from classical optimal transport to quantum optimal transport"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE", "LICENSE-CONTENT"]
authors = [{ name = "Rémy Ramadour" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pot>=0.9.3",
    "qiskit>=2.4",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.47",
    "cvxpy>=1.4",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pylatexenc>=2.10",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "black>=24.0", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qot_course"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "notebooks: executes course notebooks end-to-end (slow; deselect with -m 'not notebooks')",
]

[tool.ruff]
line-length = 88
